fix name alignment

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -63,5 +63,6 @@
   &_name {
     padding-left: 2rem;
     word-wrap: break-word;
+    line-height: 3rem;
   }
 }
